Präfix zu Bibtex Referenzen hinzugefügt

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -1,4 +1,4 @@
-@inproceedings{WWMA10,
+@inproceedings{tD2_WWMA10,
   author = {Wang, Ye and Wang, Hao and Mahimkar, Ajay and Alimi, Richard and Zhang, Yin and Qiu, Lili and Yang, Yang Richard},
   title = {R3: resilient routing reconfiguration},
   booktitle = {Proceedings of the ACM SIGCOMM 2010 conference on SIGCOMM},
@@ -114,7 +114,7 @@
 }
 
 
-@misc{RFC1142,
+@misc{tD2_RFC1142,
   author="D. Oran",
   title="{OSI IS-IS Intra-domain Routing Protocol}",
   series="Request for Comments",
@@ -127,7 +127,7 @@
     url="http://www.ietf.org/rfc/rfc1142.txt",
 }
 
-@misc{RFC2328,
+@misc{tD2_RFC2328,
   author="J. Moy",
   title="{OSPF Version 2}",
   series="Request for Comments",
@@ -154,7 +154,7 @@
     url="http://www.ietf.org/rfc/rfc3031.txt",
 }
 
-@misc{RFC4090,
+@misc{tD2_RFC4090,
   author="P. Pan and G. Swallow and A. Atlas",
   title="{Fast Reroute Extensions to RSVP-TE for LSP Tunnels}",
   series="Request for Comments",
@@ -167,7 +167,7 @@
     url="http://www.ietf.org/rfc/rfc4090.txt",
 }
 
-@misc{RFC5714,
+@misc{tD2_RFC5714,
   author="M. Shand and S. Bryant",
   title="{IP Fast Reroute Framework}",
   series="Request for Comments",
