Kapitel 1 - Einleitung überarbeitet

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -93,7 +93,11 @@
  address = {Saarbr\&\#252;cken, Germany, Germany},
 }
 
-
+@misc{tD2_Iyer03,
+ author = {Sundar Iyer and Supratik Bhattacharyya and Nina Taft and Christophe Diot},
+ title = {An Approach to Alleviate Link Overload as Observed on an IP Backbone},
+ year = {2003}
+}
 
 @article{tD2_SpMW02,
  author = {Spring, Neil and Mahajan, Ratul and Wetherall, David},
