--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -88,12 +88,11 @@ Hier steht der Abstract
 %------------------------------------------------------------------------------
 \section{Einleitung}
 \label{tD2_Einleitung}
-%TODO besserer Begriff für Netzwerkfehler (trifft nicht unbedingt genau die Sache)
 Heutige Computernetze wie beispielsweise das IP-basierte Internet, bestehen in 
 der Regel aus vielen einzelnen Netzknoten. Diese sind nicht notwendigerweise 
 direkt, sondern über mehrere Knoten hinweg miteinander verbunden. 
-In diesm Fall soricht man spricht von einem vermaschten Netz.
-Um Information über das NEtz zu entfernten Knoten zu übertragen, müssen 
+In diesem Fall spricht man von einem vermaschten Netz.
+Um Information über das Netz zu entfernten Knoten zu übertragen, müssen 
 diese von den dazwischen liegenden Netzknoten solange weitergereicht werden, 
 bis der Zielknoten erreicht wird.
 Die Wahl der zu verwendeten Zwischensysteme, also die Wahl eines Weges durch 
@@ -102,53 +101,56 @@ Da in aller Regel mehrere Weg zu Verfügung stehen, ist die Optimierung des
 Weges bezüglich eine Metrik, wie z.B die anfallenden Kosten, der kürzeste Weg, 
 oder die aktuelle Netzauslastung ein wichtiger Aspekt beim Routing.
 
-Ein Herausforderung beim Routing besteht darin, dass sich die Netztopology 
-ständig ändern kann, wodurch zuvor gefunden Routen durch das Netz ungültig 
-werden können.
-Grunde dafür sind z.B der Ausfall eines Netzknotens, das Ändern von 
-Routing-Metriken, die aktuelle Netzauslastung etc..
-Um auf solche Situationen reagieren zu können, müssen die einzelnen Router 
-untereinander Informationen über den aktuelle Zustand des Netzes austauschen.
-Hierzu gibt es eine Reihe von Routing-Protokollen wie beispielsweise die im 
-Internet eingesetzten Protokolle Open Shortest Path First (OSPF) \cite{tD2_RFC2328} 
-oder Intermediate System - Intermediate System (IS-IS) \cite{tD2_RFC1142}. 
-
-Ein wichtiger Aspekt bei der Behandlung von Netzwerkfehlern ist 
-Network Resiliency \cite{tD2_WWMA10}.
-Damit gemeint ist die Fähigkeit eines Netzes, schnell und problemlos nach einer 
-Reihen von Fehlern oder Unterbrechungen zu reorganisieren und eine 
-Datenübertragung wieder zu ermöglichen.
-Hauptaugenmerk vieler Studien und heutiger Verfahren liegt vorwiegend auf der 
-Erreichbarkeit von Netz-Komponenten. 
-Dazu zählt die Verkürzung von Ausfallzeiten bzw. die Umgehung defekter 
-Routenabschnitte um die dahinterliegenden Ziele wieder erreichbar zu machen.
-Weitergehende Problem wie die eventuelle Häufung von Stausituation, verursacht 
-durch die verminderte Netzkapazität und den umleigleiteten Verkehr, sowie 
-fehlende Vorhersagbarkeit über die geänderte Leistungsfähigkeit eines Netzes 
-werden dabei häufig außer acht gelassen.
-Das Routing, welches sich ausschließlich auf Erreichbarkeit konzentriert 
-tatsächlich anfällig für vermehrte Stausituationen ist, wird ebenfalls in 
-\cite{tD2_WWMA10} untersucht und gezeigt.
+Neben der Optimierung des Weges spielt beim Routing ein weiterer Aspekt ein 
+wichtige Rolle. 
+Über die Zeit hinweg kann sich ein Netztopologie ständig ändern, wodurch zuvor 
+gefunden Routen ungültig und neue gesucht werden müssen. Grunde dafür sind 
+beispielsweise der Ausfall eines Netzknotens, das Ändern von Routing-Metriken, 
+die aktuelle Netzauslastung etc..
+Um auf solche Situationen reagieren zu können, müssen die Router die 
+Netztopologie beobachten und Informationen über dessen aktuellen Zustand 
+austauschen.
+Hierfür gibt es eine Reihe von Routing-Protokollen wie beispielsweise die im 
+Internet eingesetzten Protokolle Open Shortest Path First (OSPF) 
+\cite{tD2_RFC2328} oder Intermediate System - Intermediate System (IS-IS) 
+\cite{tD2_RFC1142}. Eine wichtige Eigenschaft in diesem Zusammenhang ist 
+\textit{Network Resiliency} \cite{tD2_WWMA10}.
+Mit Network Resiliency wird Fähigkeit eines Netzes Netzwerks bezeichnet, 
+sich schnell und problemlos nach einer Reihen von Fehlern oder Unterbrechungen 
+zu reorganisieren und eine Datenübertragung wieder zu ermöglichen.
+Viele Verfahren legen dabei vorwiegend Wert auf die Wiederherstellung der 
+Verfügbarkeit eines oder mehrerer Netzknoten.
+Weitergehende Problem, die z.B aus der Umgehung defekter Links hervorgehen 
+können, werden häufig außer acht gelassen. Dazu zählt vorwiegend die 
+Mehrbelastung des verbliebenen Netzwerks durch die verminderte Netzkapazität 
+und den umgeleiteten Verkehr.
+Iyer at al. \cite{tD2_Iyer03} führt dies als eine der Hauptursache für das 
+Auftreten von Stausituation in IP-basierten Netzen an.
+Ein weiterer, oft nicht berücksichtigter Aspekt ist die Fehlendem Möglichkeit, 
+Aussagen über die Leistungsfähigkeit des Netzes nach dem Ausfall eines Links zu 
+treffen. 
 
 Eine Schwierigkeit bei der Entwicklung von Routing-Verfahren die auch die oben 
 genannten Probleme berücksichtigen, ist die Vielzahl von möglichen 
-Fehlerszenarian.
-Geht man von einer Obergenze $F$ von möglichen Fehlern in einem Netzwerk mit 
-$|E|$ Links aus, so entspricht die Anzahl der möglichen Fehlerszenarien 
-$\sum_{i=1}^{F} {|E| \choose i}$.
-Die Berücksichtigung jedes dieser Szenarien bedeutet i.d.R ein zu hochen 
-Berechnungsaufwand, weshalb sich die meisten Verfahren nur auf die 
-Wiederherstellung der Erreichbarkeit beschränken und Staufreiheit etc. 
-außer acht lassen.
+Fehlerszenarien. Bei einer Obergrenze von $F$ sich zeitlich Überlappenden 
+Fehlern, entspricht die Anzahl an möglichen Fehlerszenarien 
+$\sum_{i=1}^{F} {|E| \choose i}$. Die Berücksichtigung jedes dieser Szenarien 
+bedeutet i.d.R ein zu hohen Berechnungsaufwand. 
+Um aber eben beispielsweise Staufreiheit nach einem Link-Fehler garantieren zu 
+können, muss eine Aussage für jedes Szenario getroffen werden.  
 
-%TODO besseres Wort für Routing-Absicherung suchen
-R3 - Resilient Routing Reconfiguration \cite{tD2_WWMA10} ist nun ein neuer Ansatz 
-zur Routing-Absicherung, der trotz der Vielzahl von Szenarien Rechnung 
-Staufreiheit garantieren kann.
-Das Verfahren ist zudem effizient in hinsicht auf Berechnungs-Overhead und 
-Speicherverbrauch, kann flxiebel an verschieden Leistungsanforderungen 
-(z.B zur Einhaltung von Service Level Agreements) angepasst werden und ist 
-robust gegenüber Änderungen der Netzauslastung oder der Netztopolgie.
+Das von Wang et al. \cite{WWMA10} entwickelte Verfahren 
+Routing Resiliency Reconfiguration (R3) ist nun ein neues Verfahren, um sowohl 
+ein Routing für den Normalbetrieb ohne Fehler, als auch ein Protection Routing 
+für den Fall eines oder mehrere Link Ausfälle zu berechnen und ständig auf die 
+momentane Netztopologie anzupassen. Dazu wird ein Ansatz vorgestellt, 
+der die Berücksichtigung aller möglichen Fehlerszenarien vermeidet.
+Weiterhin wird gezeigt, dass das Verfahren Staufreiheit durch Link-Ausfälle 
+garantiert. Zudem ist das Verfahren effizient in Hinsicht auf 
+Berechnungs-Overhead und Speicherverbrauch, kann flexibel an verschieden 
+Leistungsanforderungen (z.B zur Einhaltung von Service Level Agreements) 
+angepasst werden und ist robust gegenüber Änderungen der Netzauslastung oder 
+der Netztopologie.
 
 
 %------------------------------------------------------------------------------
