Refenenz in der Einleitung berichtigt

--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -139,7 +139,7 @@ bedeutet i.d.R ein zu hohen Berechnungsaufwand.
 Um aber eben beispielsweise Staufreiheit nach einem Link-Fehler garantieren zu 
 können, muss eine Aussage für jedes Szenario getroffen werden.  
 
-Das von Wang et al. \cite{WWMA10} entwickelte Verfahren 
+Das von Wang et al. \cite{tD2_WWMA10} entwickelte Verfahren 
 Routing Resiliency Reconfiguration (R3) ist nun ein neues Verfahren, um sowohl 
 ein Routing für den Normalbetrieb ohne Fehler, als auch ein Protection Routing 
 für den Fall eines oder mehrere Link Ausfälle zu berechnen und ständig auf die 
