--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -33,8 +33,19 @@
 % \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ \/ 
 % --> ... und jetzt kommt die Zusammenfassung:
 \begin{abstract}
-%TODO: Abstract einfügen
-Hier steht der Abstract
+
+Die Wiederherstellung der Erreichbarkeit von Netzknoten nach dem Ausfall eines 
+Netzwerk-Links ist eine wichtige Aufgabe heutiger Routing-Protokolle. 
+Weiterführende, oder daraus resultierende Problem werden von heutigen Verfahren 
+jedoch oft außer Acht gelassen.
+Routing Resiliency Rekonfiguration (R3) von Wang et al. \cite{tD2_WWMA10} ist 
+ein neuer Ansatz, der es ermöglicht einige dieser Problem zu berücksichtigen. 
+R3 kann zum einen Staufreiheit nach Link-Ausfällen garantieren, ist flexibel an 
+verschiedene Leistungsanforderung anpassbar und ist robust gegenüber 
+variierender Netzbelastung oder sich ändernde Netztopologie. Außerdem 
+erfordert R3 nur geringen Berechnungs- und Speicheraufwand für die eingesetzten 
+Router.  
+
 \end{abstract}
 % /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ /\ 
 % -----------------------------------------------------------------------------
