--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -145,6 +145,20 @@
   url="http://www.ietf.org/rfc/rfc2328.txt",
 }
 
+@misc{tD2_RFC2453,
+  author="G. Malkin",
+  title="{RIP Version 2}",
+  series="Request for Comments",
+  number="2453",
+  howpublished="RFC 2453 (Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1998,
+  month=nov,
+    note="Updated by RFC 4822",
+  url="http://www.ietf.org/rfc/rfc2453.txt",
+}
+
 @misc{tD2_RFC3031,
   author="E. Rosen and A. Viswanathan and R. Callon",
   title="{Multiprotocol Label Switching Architecture}",
