--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -99,7 +99,7 @@ Router.
 %------------------------------------------------------------------------------
 \section{Einleitung}
 \label{tD2_Einleitung}
-Heutige Computernetze wie beispielsweise das IP-basierte Internet, bestehen in 
+Heutige Computernetze, wie beispielsweise das IP-basierte Internet, bestehen in 
 der Regel aus vielen einzelnen Netzknoten. Diese sind nicht notwendigerweise 
 direkt, sondern über mehrere Knoten hinweg miteinander verbunden. 
 In diesem Fall spricht man von einem vermaschten Netz.
@@ -109,8 +109,8 @@ bis der Zielknoten erreicht wird.
 Die Wahl der zu verwendeten Zwischensysteme, also die Wahl eines Weges durch 
 das Netz wird als Routing bezeichnet.
 Da in aller Regel mehrere Weg zu Verfügung stehen, ist die Optimierung des 
-Weges bezüglich eine Metrik, wie z.B die anfallenden Kosten, der kürzeste Weg, 
-oder die aktuelle Netzauslastung ein wichtiger Aspekt beim Routing.
+Weges bezüglich eine Metrik, wie z.B der kürzeste Weg, oder die aktuelle 
+Netzauslastung ein wichtiger Aspekt beim Routing.
 
 Neben der Optimierung des Weges spielt beim Routing ein weiterer Aspekt ein 
 wichtige Rolle. 
@@ -122,9 +122,10 @@ Um auf solche Situationen reagieren zu können, müssen die Router die
 Netztopologie beobachten und Informationen über dessen aktuellen Zustand 
 austauschen.
 Hierfür gibt es eine Reihe von Routing-Protokollen wie beispielsweise die im 
-Internet eingesetzten Protokolle Open Shortest Path First (OSPF) 
-\cite{tD2_RFC2328} oder Intermediate System - Intermediate System (IS-IS) 
-\cite{tD2_RFC1142}. Eine wichtige Eigenschaft in diesem Zusammenhang ist 
+Internet eingesetzten Protokolle Routing Information Protokoll (RIP) 
+\cite{tD2_RFC2453}, Open Shortest Path First (OSPF) \cite{tD2_RFC2328} oder 
+Intermediate System - Intermediate System (IS-IS) \cite{tD2_RFC1142}. 
+Eine wichtige Eigenschaft in diesem Zusammenhang ist 
 \textit{Network Resiliency} \cite{tD2_WWMA10}.
 Mit Network Resiliency wird Fähigkeit eines Netzes Netzwerks bezeichnet, 
 sich schnell und problemlos nach einer Reihen von Fehlern oder Unterbrechungen 
@@ -137,31 +138,30 @@ Mehrbelastung des verbliebenen Netzwerks durch die verminderte Netzkapazität
 und den umgeleiteten Verkehr.
 Iyer at al. \cite{tD2_Iyer03} führt dies als eine der Hauptursache für das 
 Auftreten von Stausituation in IP-basierten Netzen an.
-Ein weiterer, oft nicht berücksichtigter Aspekt ist die Fehlendem Möglichkeit, 
+Ein weiterer, oft nicht berücksichtigter Aspekt ist die fehlende Möglichkeit, 
 Aussagen über die Leistungsfähigkeit des Netzes nach dem Ausfall eines Links zu 
 treffen. 
 
 Eine Schwierigkeit bei der Entwicklung von Routing-Verfahren die auch die oben 
-genannten Probleme berücksichtigen, ist die Vielzahl von möglichen 
-Fehlerszenarien. Bei einer Obergrenze von $F$ sich zeitlich Überlappenden 
-Fehlern, entspricht die Anzahl an möglichen Fehlerszenarien 
-$\sum_{i=1}^{F} {|E| \choose i}$. Die Berücksichtigung jedes dieser Szenarien 
+genannten Probleme berücksichtigen, ist die Vielzahl möglicher Fehlerszenarien. 
+Bei einem Netz mit 500 Links sind bei 3 Link-Fehlern schon über 20 Millionen 
+Szenarien möglich. Die Berücksichtigung jedes dieser Szenarien 
 bedeutet i.d.R ein zu hohen Berechnungsaufwand. 
 Um aber eben beispielsweise Staufreiheit nach einem Link-Fehler garantieren zu 
 können, muss eine Aussage für jedes Szenario getroffen werden.  
 
 Das von Wang et al. \cite{tD2_WWMA10} entwickelte Verfahren 
-Routing Resiliency Reconfiguration (R3) ist nun ein neues Verfahren, um sowohl 
+Routing Resiliency Reconfiguration (R3) ist ein neues Verfahren, um sowohl 
 ein Routing für den Normalbetrieb ohne Fehler, als auch ein Protection Routing 
-für den Fall eines oder mehrere Link Ausfälle zu berechnen und ständig auf die 
-momentane Netztopologie anzupassen. Dazu wird ein Ansatz vorgestellt, 
-der die Berücksichtigung aller möglichen Fehlerszenarien vermeidet.
+für den Fall eines oder mehrere Link-Ausfälle zu berechnen und nach jedem 
+Fehler auf die momentane Netztopologie anzupassen. Dazu wird ein Ansatz 
+vorgestellt, der die Berücksichtigung aller möglichen Fehlerszenarien vermeidet.
 Weiterhin wird gezeigt, dass das Verfahren Staufreiheit durch Link-Ausfälle 
-garantiert. Zudem ist das Verfahren effizient in Hinsicht auf 
-Berechnungs-Overhead und Speicherverbrauch, kann flexibel an verschieden 
+garantieren kann. Zudem wird gezeigt, dass das Verfahren effizient in Hinsicht 
+auf Berechnungs-Overhead und Speicherverbrauch ist, es flexibel an verschieden 
 Leistungsanforderungen (z.B zur Einhaltung von Service Level Agreements) 
-angepasst werden und ist robust gegenüber Änderungen der Netzauslastung oder 
-der Netztopologie.
+angepasst werden kann und robust gegenüber Änderungen der Netzauslastung oder 
+der Netztopologie ist.
 
 
 %------------------------------------------------------------------------------
@@ -170,8 +170,8 @@ der Netztopologie.
 \section{Grundlagen}
 \label{tD2_Grundlagen}
 Neben der Pfadbasierten Auffassung von Routings, ist es auch möglich Routing 
-als Fluss aufzufassen \cite{tD2_ApCo03} und das zugrundeliegende Computernetzwerk als 
-Flussnetzwerk zu betrachten.
+als Fluss aufzufassen \cite{tD2_ApCo03} und das zugrundeliegende 
+Computernetzwerk als Flussnetzwerk zu betrachten.
 Häufig ist eine Pfad (Route) von einer Quelle zur Senke nicht eindeutig, 
 sondner es gibt mehrer Pfade für das Paar aus Quell und Senke. 
 Für die Datenübertragung kann nicht nur einer dieser Pfade, sondern auch 
@@ -207,40 +207,19 @@ Ein Routing $r$ ist korrekt, wenn $r$ die nachfolgenden Bedinungen erfüllt:
 Die erste Bedingung entspricht dem für Flussnetzwerke üblichen Flusserhalt und 
 fordert, dass jeder Zwischenknoten genausoviel weiterleitet wie in ihn gesendet 
 wird.
-Die zweite Bedingun forde, dass der gesamte von einer Quelle initierte Verkehr 
-weitergeleitet wird, während die dritte Bedingung verbietet, dass ein Teil 
-davon wieder zur Quelle zurückgesendet wird.
-Die vierte Bedinung fordert das der weitergeleitete Anteil zwischen $0\%$ und 
+Die zweite Bedingung fordert, dass der gesamte von einer Quelle initierte 
+Verkehr weitergeleitet wird, während die dritte Bedingung verbietet, dass ein 
+Teil davon wieder zur Quelle zurückgesendet wird.
+Die vierte Bedinung fordert, dass der weitergeleitete Anteil zwischen $0\%$ und 
 $100\%$ liegt.
 
-
-%TODO Verwandte Arbeiten, bessere Einleitung suchen.
-%TODO "Routing für sich ändernde Netzauslastungen" ist das so richtig?
-%TODO Referenzen einfügen
-%Bisherige Arbeiten zum diesem Thema behandeln meistens nur eine Seite, 
-%entweder \textit{Routing im Fehlerfall} oder \textit{Routing für sich ändernde Netzauslastungen}.
-%Das Hauptaugenmerk bei Routing im Fehlerfall liegt dabei in aller Regel auf der Ausfallzeit 
-%und wie dieser minimiert werden kann. 
-%Ein häufig verwender Ansatz ist die Vorbrechnung von Alternativ-Routen und das schnell Umschalten im Fehlerfall.
-%Dieser Ansatz bietet allerdings noch keine Möglichkleit um Stausituation zu vermeiden oder die vorraussichtliche Leistung zu bestimmen.
-%Alternatiev zu Vorberechnung können bestehende Routen auch nach jedem Fehler angepasst und optimiert werden. 
-%Der Vorteil besteht darin, dass die neuen Routen jeweils auf die aktuelle Netztopology angepasst sind und diese optimal auslasten können.
-%Der Nachteil liegt in der schlechteren Reaktionszeit. 
-%Mitunter kann die Reorganisation des Routings für die neue Netztopology sehr aufwendig zu berechnen und einzurichten sein.
-%Der andere Aspekt mit dem sich viele Arbeiten befassen ist die Tatsache, 
-%dass sich die Verkehrssituationen in einem Netz wie beispielweise dem Internet sehr häufig ändern 
-%und man daher ein Routing benötigt, was dies berücksichtigt.
-
-
-%TODO MPLS - Ausführlicher?
-%TODO FEC im zusammenhang mit Packet-Reihenfolge
 Alternativ zum klassischen IP-Routing gibt es auch andere Verfahren zur 
 Weiterleitung von Dateneinheiten innerhalb eines Netzwerks.
 Ein Beispiel, welches auch in \cite{tD2_WWMA10} als Implementierungsgrundlage 
-von R3 verwendet wird ist das Multiprotolkol-Label-Switching (MPSL) 
+von R3 verwendet wird, ist Multiprotolkoll-Label-Switching (MPSL) 
 \cite{tD2_RFC3031}. MPLS ist ein Verfahren, welches eine verbindungsorientierte 
 Datenübertragung auch in ansonsten verbindungslosen Netzen ermöglicht. 
-Während beim klassichen Routing auf Schicht 3 jeder Router aufs neue den 
+Während beim klassichen Routing auf Schicht 3 jeder Router erneut den 
 nächsten Knoten (Next Hop) für eine Dateneinheit bestimmen muss, wird bei MPLS 
 zu Beginn einer Übertragung jede Dateneinheit einer Weiterleitungsklasse 
 (Forwarding Equivalent Class - FEC) zugeordnet, die den Pfad 
@@ -255,15 +234,15 @@ Dazu werden die Labels auf einem Stack, dem Lable-Stack abgelegt.
 Ein Router kann neue Labels auf dem Stack ablegen. 
 Für die Auswertung des nächstens Routers wird immer das oberste Stackelement 
 herangezogen. 
-Ist der nächste Router der aktuelle Router, muss das Label wieder Stack 
+Ist der nächste Router der aktuelle Router, muss das Label wieder vom Stack 
 entfernt werden.
 Der Label-Stack von MPLS wird in \cite{tD2_WWMA10} zu Implementierung von R3 
 verwendet.
 
-
-%TODO Fast rerouting (FRR) - Ausführlicher?
-Solgange die Urspüngliche Netztopologie besteht, kann das reguläre Routing verwendet werden. 
-Bei Link-Ausfällen ist dieses Routing nicht mehr gültig und muss angepasst werden. 
+Solgange die Urspüngliche Netztopologie besteht, kann das reguläre Routing 
+(d.h bereits berechnete Routen) verwendet werden. 
+Bei Link-Ausfällen ist dieses Routing nicht mehr gültig und muss angepasst 
+werden. 
 Dazu existieren unterschieldiche Verfahren, sog. Routing Protection Schemes. 
 Ein häufig genutztes Verfahren ist das in \cite{tD2_RFC5714} für IP definierte 
 Fast-Rerotuing.
@@ -279,15 +258,15 @@ und der Zeit um die Routing-Tabellen in die Hardware zu übertragen.
 Um nun diese Ausfallzeit möglichst kurz zu halten, 
 verwendet Fast-Rerouting eine schon vorab berechnete alternative Route 
 um die ausgefallenen Komponenten zu umgehen.
-Dadurch kann Ausfallzeit und damit die Verzögerung auf die Erkennung des 
-Fehlers am lokalen Router und das aktivieren der Alterniv-Route beschränkt 
-werden. 
+Dadurch kann die Ausfallzeit eiens Netzknoten und damit die Verzögerung von 
+Dateneinheiten auf die Erkennung des Fehlers am lokalen Router und das 
+aktivieren der Alterniv-Route beschränkt werden. 
 Eine Information der anderen Router im Netz ist nicht zwingen erforderlich.
 Für MPLS gibt es eine ähnlich arbeitenden Variante die in \cite{tD2_RFC4090} 
 beschrieben wird.
 
 Leider kann auch mit FRR nicht sichergestellt werden, 
-dass es aufgrund ausgefallern Links und dadurch umgeleiten Netzwerkverkehr 
+dass es aufgrund ausgefallener Links und dadurch umgeleiten Netzwerkverkehr 
 zu Stausitutation kommt. 
 Wang et al. \cite{tD2_WWMA10} definiert dazu das folgende Problem.
 \begin{Def} 
@@ -295,9 +274,30 @@ Wang et al. \cite{tD2_WWMA10} definiert dazu das folgende Problem.
 Routing $r$ als auch ein Protection Routing $p$ zu berechnen, so dass die 
 Maximale Link Auslastung für bis zu F Link-Fehlern unter 100\% bleibt.
 \end{Def}
-Mit R3 hat Wang et al. nun ein Ansatz vorgestellt, 
-der es ermöglicht, dieses Problem zu lösen.
 
+Bisherige Arbeiten zum diesem Thema behandeln meist nur eine Seite, 
+entweder \textit{Routing im Fehlerfall} oder 
+\textit{Routing für sich ändernde Netzauslastungen}.
+Das Hauptaugenmerk bei Routing im Fehlerfall liegt dabei in aller Regel auf 
+der Ausfallzeit und wie dieser minimiert werden kann. 
+Ein häufig verwender Ansatz ist die Vorbrechnung von Alternativ-Routen und 
+das schnell Umschalten im Fehlerfall. 
+Dieser Ansatz bietet allerdings noch keine Möglichkeit um Stausituation zu 
+vermeiden oder die vorraussichtliche Leistung nach einem Link-Fehler zu 
+bestimmen.
+Alternativ zu Vorberechnung können bestehende Routen auch nach jedem Fehler 
+angepasst und optimiert werden. 
+Der Vorteil besteht darin, dass die neuen Routen jeweils auf die aktuelle 
+Netztopologie angepasst sind und diese optimal auslasten können.
+Der Nachteil liegt in der schlechteren Reaktionszeit. 
+Mitunter kann die Reorganisation des Routings für die neue Netztopology sehr 
+aufwendig zu berechnen und einzurichten sein.
+Ein anderes Aspekt mit dem sich viele Arbeiten befassen ist die Tatsache, 
+dass sich die Verkehrssituationen in einem Netz wie beispielweise dem Internet 
+sehr häufig ändern und man daher ein Routing benötigt, welches dies 
+berücksichtigt.
+
+Mit R3 hat Wang et al. ein Ansatz vorgestellt, der beide Aspekte berücksichtigt.
 
 %------------------------------------------------------------------------------
 % Kapitel - Resilient Routing Reconfiguration
@@ -305,53 +305,72 @@ der es ermöglicht, dieses Problem zu lösen.
 \section{Resilient Routing Reconfiguration}
 \label{tD2_R3}
 
-Wie zuvor erwähnt besteht ein Problem beim Entwickeln von Routing-Schematas in der vielzahl möglicher Fehlerszenarien 
-und der daraus resultierenden Unkenntnis der genauen Netztopologie.
-Die Grundidee von R3 besteht nun darin nicht jede dieser mögliche Topologie zu berücksichtigen, 
-sondern das Problem in eine besser handhabbare Form zu transformieren.
+Wie in Abschnitt \ref{tD2_Einleitung} erwähnt, besteht ein Problem beim 
+Entwickeln von Routing-Protection-Schemes in der Vielzahl möglicher 
+Fehlerszenarien und der daraus resultierenden Unkenntnis der genauen 
+Netztopologie.
+Für ein Netz mit $|E|$ Links und bis zu $F$ Link-Fehlern entspricht die 
+Anzahl möglicher Fehlerszenarien $\sum_{i=1}^F |E| \choose i$.
+Die Grundidee von R3 besteht nun darin, nicht jede dieser möglichen Topologien 
+zu berücksichtigen, sondern das Problem in eine besser handhabbare Form zu 
+transformieren.
 
-Angenommen ein Link $e$ auf einem Pfad zwischen zwei Routern $a$ und $b$ in einem Netz $G=(V,E)$ fällt aus, 
-so muss das verbleibende Netz $G'=(V, E \backslash \{e\})$ zusätzlich den vormals diesen Link transportierten Verkehr übertragen.
-Diese Zusatzbelastung hängt von dem aktuellen Verkehr des Links ab, 
-kann aber höchsten so groß wie die Kapazität $c_{e}$ des defekten Links sein 
-und wird als \textit{Virtual Demand} bezeichent. 
-Ordnet man jedem Link $e \in E$ einen solchen Virtual Demand entsprechend seiner Kapaziät zu, 
-dann deckt die Konvexkombination aller Virtual Demands den gesamten umzuleitenden Verkehr ab.
+Angenommen ein Link $e$ auf einem Pfad zwischen zwei Routern $a$ und $b$ in 
+einem Netz $G=(V,E)$ fällt aus, so muss das verbleibende Netz 
+$G'=(V, E \backslash \{e\})$ den vormals über diesem Link 
+transportierten Verkehr zusätzlich übertragen.
+Diese Zusatzbelastung hängt von der aktuellen Auslastung des ausgefallenen 
+Links ab, kann aber höchsten so groß wie die Kapazität $c_{e}$ dieses Links sein 
+und wird als \textit{Virtual Demand} bezeichnet. 
+Ordnet man jedem Link $e \in E$ einen solchen Virtual Demand entsprechend 
+seiner Kapazität zu, dann deckt die Konvexkombination aller Virtual Demands 
+den gesamten umzuleitenden Verkehr ab.
 
-Ordnet man jedem Link $e \in E$ einen Variable $x_{e}$ für den Virtual Demand des Links zu
-und erlaubt man bis zu $F$ fehlerhafte Links,  
-dann überdeckt die Menge 
+Ordnet man jedem Link $e \in E$ einen Variable $x_{e}$ für den Virtual Demand 
+des Links zu und erlaubt man bis zu $F$ fehlerhafte Links, dann überdeckt die 
+Menge 
 \begin{equation}
 X_{F} = \{x|0 \le \frac{x_{e}}{c_{e}} \le 1 (\forall e \in V), \sum_{e \in E} \frac{x_{e}}{c_{e}} \le F\}
 \label{tD2_VirtualDemandSet}
 \end{equation} 
 den gesamten umzuleitenden Verkehr, unabhängig vom konkreten Fehlerszenario.
-Anderst ausgedrückt, 
-für jedes mögliche Fehlerszenario mit maximal $F$ fehlerhaften Links enthält $X_{F}$ den gesamten umzuleitenden Verkehr.
-Anstelle eines Routings für ein konstante Verkehrsmatrix $d$ bei variabler Netztopologie zu berechnen, 
-kann nun ein Routing für die Origianltopologie bei variablen Verkehrsaufkommen $d+X_{F}$ berechnet werden. 
-Beschrieben wird das Verkehrsaufkomme $d+X_{F}$ durch die Summe des aktuellen Verkehrs $d$ und der Menge von Virtual Demands $X_{f}$ 
-und entspricht $d+X_{f} = \{d+x|x \in X_{f}\}$.
-%TODO Warum ist d+X_F unendlich
-Zu beachten ist hierbei, das im Gegensatz zur endlichen Anzahl möglicher Netztopologien die Anzahl möglicher neuer Verkehrsmatrizen $d+X_{F}$ leider unendlich ist. 
-Dies stellt jedoch kein Problem dar, 
-da sich die Menge dieser Verkehrzmatrizen mittels \ref{tD2_VirtualDemandSet} als enliche Menge linearer Bedingunge formulieren lässt.
-Dadurch kann Lineare Programmierung zur Berechnung und Optimierung eines Routings $r$ und eines Protection Routings $p$ verwendet werden.
-Das explizite Aufzählen der unterschiedlichen Vekehrmatrizen ist nicht notwendig.
+Anders ausgedrückt, für jedes mögliche Fehlerszenario mit maximal $F$ 
+fehlerhaften Links enthält $X_{F}$ den gesamten umzuleitenden Verkehr.
+Anstelle eines Routings für eine konstante Verkehrsmatrix $d$ bei variabler 
+Netztopologie zu berechnen, kann nun ein Routing für die Originaltopologie bei 
+variablem Verkehrsaufkommen $d+X_{F}$ berechnet werden. 
+Beschrieben wird das Verkehrsaufkommen $d+X_{F}$ durch die Summe des aktuellen 
+Verkehrs $d$ und der Menge von Virtual Demands $X_{f}$ und entspricht 
+$d+X_{f} = \{d+x|x \in X_{f}\}$.
+
+Zu beachten ist hierbei, dass im Gegensatz zur endlichen Anzahl möglicher 
+Netztopologien die Anzahl möglicher neuer Verkehrsmatrizen $d+X_{F}$ leider 
+unendlich ist. 
+Dies stellt jedoch kein Problem dar, da sich die Menge dieser Verkehrsmatrizen 
+mittels \ref{tD2_VirtualDemandSet} als endliche Menge linearer Bedingungen 
+formulieren lässt.
+Dadurch kann lineare Optimierung zur Berechnung und Optimierung eines 
+Routings $r$ und eines Protection Routings $p$ verwendet werden.
+Das explizite Aufzählen der unterschiedlichen Verkehrsmatrizen ist nicht 
+notwendig.
 
 R3 nutzt nun diese Überlegungen als Grundlage.
-Prinzipiell gliedert sich R3 in zwei Teile, 
-einer vom Netzbetrieb unabhängen Vorberechnung (Offline-Phase), die sowohl ein Routing $r$ als auch ein Protection Routing $p$ berechnet 
-und einer ständigen Rekonfiguration (Online-Phase) von $p$ während des eigentlichen Netzbetriebs.
+Prinzipiell gliedert sich R3 in zwei Teile, einer vom Netzbetrieb unabhängigen 
+Vorberechnung (Offline-Phase), die sowohl ein Routing $r$ als auch ein 
+Protection Routing $p$ berechnet und einer Rekonfiguration (Online-Phase) von 
+$p$ nach jedem Link-Ausfall während des eigentlichen Netzbetriebs.
 
 \subsection{Vorberechnung (Offline-Phase)}
-Aufgabe der Vorberechnungsphase ist es ein möglichst optimales Routing $r$ für eine gegeben Verkehrsmatrix $d$ 
-sowie ein entsprechendes Protection Routing $p$ für den Virtual Demand $X_{F}$ zu berechnen.
-Optimierungssziel ist dabei die Mimimierung der Maximalen Link-Auslastung (MLU) für die originale Netztopologie 
-und das kombinierten Verkehrsaufkommen $d+X_{F}$ aus aktuellem Verkehr $d$ und Virtual Demand $X_{F}$.
-Wie Eingangs schon erwähnt lässt sich dieses Problem mittels Linearer Programmierung effizient lösen.
+Aufgabe der Vorberechnungsphase ist es ein möglichst optimales Routing 
+$r$ für eine gegeben Verkehrsmatrix $d$ sowie ein entsprechendes 
+Protection Routing $p$ für den Virtual Demand $X_{F}$ zu berechnen.
+Optimierungsziel ist dabei die Minimierung der maximalen Link-Auslastung (MLU) 
+für die ursprüngliche Netztopologie und das kombinierte Verkehrsaufkommen 
+$d+X_{F}$ aus aktuellem Verkehr $d$ und Virtual Demand $X_{F}$.
+Wie Eingangs schon erwähnt lässt sich dieses Problem mittels linearer 
+Optimierung effizient lösen.
 
-Formal entspricht das Problem den nachfolgenden linearen Programm:
+Formal entspricht das Problem den nachfolgenden linearen Optimierungsproblem:
 \begin{eqnarray}
  \begin{array}{rl}
     \mbox{\textbf{minimize}}_{(r,p)}    & MLU \\
@@ -364,15 +383,17 @@ Formal entspricht das Problem den nachfolgenden linearen Programm:
  \label{tD2_LPOriginal}
 \end{eqnarray}
 
-Während [C1] sicherstellt,  dass $r$ und $p$ die Bedignunge für ein gültiges Routing einhalten 
-fordert [C2] , dass die Maximal-Auslastung (MLU) für jeden Link und jeden Virtual Demand $x \in X_{F}$ nicht überschritten wird.
-In dieser Form des linearen Programm besteht weiterhin das Problem, 
+Während [C1] sicherstellt,  dass $r$ und $p$ die Bedingungen für ein gültiges 
+Routing einhalten fordert [C2], dass die Maximal-Auslastung (MLU) für jeden 
+Link und jeden Virtual Demand $x \in X_{F}$ nicht überschritten wird.
+In dieser Form des linearen Optimierungsproblems besteht weiterhin das Problem, 
 dass es sich bei $X_{F}$ um eine nicht endliche Menge handelt 
-und sich daraus auch unendlich viele Bedingungen ergeben.
+und sich daraus unendlich viele Bedingungen ergeben.
 
-Nun kann aber die Dualität von linearen Programmen ausgenutz werden,  
-um das ursprüngliche Programm \ref{tD2_LPOriginal} in das nachfolgende einfachere lineares Programm
-mit polynomialer Anzahl an Bedingungen zu transformieren.
+Nun kann aber die Dualität von linearen Optimierungsproblemen ausgenutzt werden,  
+um das ursprüngliche Problem \ref{tD2_LPOriginal} in das nachfolgende 
+einfachere lineare Optimierungsproblem mit polynomialer Anzahl an Bedingungen 
+zu transformieren.
 
 \begin{eqnarray}
  \begin{array}{rl}
@@ -388,20 +409,8 @@ mit polynomialer Anzahl an Bedingungen zu transformieren.
  \label{tD2_LPSimple}
 \end{eqnarray}
 
-Für ein genau Beschreibung der Transformation zwischen \ref{tD2_LPSimple} und \ref{tD2_LPSimple} siehe \cite{tD2_WWMA10}
-
-%Dazu kann in Bedingung [C2] die Summe  $\sum_{l \in E}x_{l}p_{l}(e)$ durch die maximal mögliche Auslastung $ML(p,e)$ von $e$ für alle $x \in X_{f}$ ersetzt werden. 
-%Die Bedingung bleibt dadurch äquivalent. 
-%%TODO Warum beleibt die Bedingung äquivalent
-%Die Suche nach $ML(p,e)$ definiert ein weiteres lineares Programm:
-%\begin{eqnarray}
-% \begin{array}{rl}
-%    \mbox{\textbf{maximize}}_{x}    	& \sum_{l \in E}x_{l}p_{l}(e) \\
-%    \mbox{\textbf{subject to:}}     	& \forall l \in E: \frac{x_{l}}{c_{l}} \le 1\\
-%					& \sum_{l \in E} \frac{x_l}{c_l} \le F
-% \end{array}
-%\end{eqnarray}
-
+Für ein genau Beschreibung der Transformation zwischen \ref{tD2_LPOriginal} 
+und \ref{tD2_LPSimple} siehe \cite{tD2_WWMA10}
 
 \subsection{Rekonfiguration (Online-Phase)}
 Da sich im Fehlerfall, z.B durch den Ausfall eines Links während des Betriebes die Netztopologie ändert, 
@@ -411,7 +420,7 @@ dass $p$ keine ungültigen (defekten) Links verwendet.
 Nachdem ein Link-Fehler auf einem Link $e$ von einem Router erkannt wird, 
 aktiviert dieser sofort sein Protection Routing $p$ und leitet den Verkehr entsprechen einer Routing-Alternative $\xi_{e}$ um.
 Da $p$ allerdings nicht für die Topologie in diesem konkreten Fehlerfall, 
-sondern auf der ursprünglichen Netztopologie definert wurde, 
+sondern auf der ursprünglichen Netztopologie definiert wurde, 
 muss $p$ zuvor entsprechend des Fehlers angepasst werden, 
 um sicherzustellen das der defekte Link $e$ nicht mehr verwendet wird.  
 Um dies zu erreichen muss lediglich eine einfache Anpassung (re-scaling) der verbliebenen Links durchgeführt werden, 
@@ -424,32 +433,33 @@ und somit Routing-Bedingung [R2] in \ref{tD2_RoutingConstraints} gültig bleibt.
 
 Um den fehlerhaften Link $e$ nun generell nicht mehr zu benutzen, 
 müssen sowohl Routing $r$ als auch Protection Routing $p$ angepasst werden.
-Dazu kann einfach der vormals an $e$ zugeteiltet Verkehr $r_{ab}(e)$ 
+Dazu kann einfach der vormals an $e$ zugeteilte Verkehr $r_{ab}(e)$ 
 bzw. $p_{ab}(e)$ auf die Routing-Alternative $xi_{e}$ verteilt werden.
 Die Mehrbelastung für die betroffenen Links entspricht $r_{ab}*\xi_{e}(l);~\forall a,b \in V, \forall l \in E \backslash \{e\}$
 bzw. $p_{uv}(e)*\xi_{e}(l);~\forall u,v \in E \backslash \{e\}, \forall l \in E \backslash \{e\}$.
 
 \subsection{Erweiterungen}
 %TODO Erweiterungen genauer erklären
-Wang et al. bescheibt in \cite{tD2_WWMA10} einige Erweiterung mit denen der 
+Wang et al. beschreibt in \cite{tD2_WWMA10} einige Erweiterungen mit denen der 
 Standartansatz von R3 erweitert werden kann.
 
-Eine Erweiterung ist der Umgang mit variablen Verkehrmatrizen, 
-ansteller der wie bisher angenommen konstanten Verkehrsmatrix $d$. 
+Eine Erweiterung ist der Umgang mit variablen Verkehrsmatrizen, 
+anstelle der wie bisher angenommen konstanten Verkehrsmatrix $d$. 
 
 Die nächste Erweiterung ist die Behandlung von Zusammenhängenden Link-Ausfällen.
-Link-Ausfälle treten nicht immer einzeln und unabhängig voneinander auf, sondern 
-können in einem gewissen Zusammenhang stehen. Als Beispiel wird in \cite{tD2_WWMA10}
-der Ausfall einer von mehreren IP-Links gemeinsam genutzen Komponente angeben, 
-oder das gleichzeitige Abschalten mehrerer Links durch den Netzbetreiber für 
-Wartungsarbeiten. Wang et al. unterscheidet dazu die beiden Klassen, 
-Shared Risk Link Group (SRLG) zu den das erste Beispiel gehört 
-und die Maintenance Link Group (MLG) zu der das zweite Beispiel gehört.
-Eine Shared Risk Link Group besteht aus Links die immer gleichzeitig unterbrochen 
-werden.
-Eine MLG besteht aus Links die vom Netzbetrieber zu Wartungszwecken zusammen 
-abgeschlaten werden.
-R3 kann nun ergänzt werden um soche Fehlerkarakteristiken zu berücksichtigen.
+Link-Ausfälle treten nicht immer einzeln und unabhängig voneinander auf, 
+sondern können in einem gewissen Zusammenhang stehen. 
+Als Beispiel wird in \cite{tD2_WWMA10} der Ausfall einer von mehreren 
+IP-Links gemeinsam genutzten Komponente angeben, oder das gleichzeitige 
+Abschalten mehrerer Links durch den Netzbetreiber für Wartungsarbeiten. 
+Wang et al. unterscheidet dazu die beiden Klassen, Shared Risk Link Group 
+(SRLG) zu denen das erste Beispiel gehört und die Maintenance Link Group (MLG) 
+zu der das zweite Beispiel gehört.
+Eine Shared Risk Link Group besteht aus Links die immer gleichzeitig 
+unterbrochen werden.
+Eine MLG besteht aus Links die vom Netzbetreiber zu Wartungszwecken zusammen 
+abgeschaltet werden.
+R3 kann nun ergänzt werden um solche Fehlercharakteristiken zu berücksichtigen.
 
 Eine weitere Möglichkeit von R3 besteht darin unterschiedliche Verkehrsklassen 
 unterschiedlich zu behandeln, indem eine Klasse mehr und die andere weniger 
@@ -458,17 +468,17 @@ gleichzeitig bestehende Fehler tolerieren kann.
 Die letzten beiden vorgestellten Erweiterungen befassen sich mit dem Verhältnis 
 zwischen Leistung im Normalbetrieb und Fehlerfall und mit dem Verhältnis 
 zwischen Netzauslastung und Verzögerungszeit.
-%TODO Formaler?
 Da bei Ausfall eines oder mehrere Links die Netzkapazität gemindert wird und 
-der Zusatzverkehr des defekten Links zusätzlich übetragen werden muss, 
-müssen entsprechende Redundanz in Form von Kapazitätsreserven berücksichtigt werden. 
+der Zusatzverkehr des defekten Links zusätzlich übertragen werden muss, 
+müssen entsprechende Redundanz in Form von Kapazitätsreserven berücksichtigt 
+werden. 
 Will man im Fehlerfall weiterhin eine hohe Leistung ermöglichen, 
 muss diese Redundanz entsprechend groß sein. 
-Umgekehr bedeutet dies das im Normalbetrieb nicht die best mögliche 
+Umgekehrt bedeutet dies das im Normalbetrieb nicht die bestmögliche 
 Auslastung erreicht werden kann. 
-Um die Auslastung für den regulären Betrieb zu beeinfluss bzw. zu verbessern,
-wird das Lineare Programm \ref{tD2_LPSimple} um zusätzliche Bedinungen ergänzt, 
-mit denen der Abstand der Normallseitung vom Optimum beeinflusst werden kann.  
+Um die Auslastung für den regulären Betrieb zu beeinflussen bzw. zu verbessern,
+wird das Lineare Programm \ref{tD2_LPSimple} um zusätzliche Bedingungen ergänzt, 
+mit denen der Abstand der Normalleistung vom Optimum beeinflusst werden kann.  
 %TODO Trade off between network utilization and delay
 
 
@@ -478,11 +488,12 @@ mit denen der Abstand der Normallseitung vom Optimum beeinflusst werden kann.
 \section{Implementierung}
 \label{tD2_Implementierung}
 Im nachfolgenden Abschnitt soll eine mögliche Implementierung von R3, 
-wie sie von Wange et al. in \cite{tD2_WWMA10} vorgeschlagen wird vorgestellt werden.
+wie sie von Wange et al. in \cite{tD2_WWMA10} vorgeschlagen wird vorgestellt 
+werden.
 
 Die Grundlage von R3 bildet die flussbasierte Darstellung des Routings.
-Eine solches Routing-Schema wird von heutigen Routern allerdings noch 
-unterstütz, weshalb für eine Implementierung bestehende Verfahren daraufhin 
+Eine solches Routing-Schema wird von heutigen Routern allerdings noch nicht 
+unterstützt, weshalb für eine Implementierung bestehende Verfahren daraufhin 
 angepasst oder neue implementiert werden müssen.
 Wang et al. verwendet MPLS (Linux MPLS) als Grundlage 
 und gib eine darauf aufbauende Erweiterung für flussbasiertes Routing an, 
@@ -491,11 +502,11 @@ genannt MPLS-ff.
 Bei reinem MPLS wählt der Router beim Eintreffen eines Paketes anhand dessen 
 Label das zu verwendende Interface, über welches das Paket weitergeleitet 
 werden soll.
-Dazu führt der Router eine Datenstruktur in Form einer Tabel (ILM), die für 
-jedes Label eine entsprechende "next-hop label forwarding instruction (NHLFE) 
-enthält. 
-Da für jedes Label nur ein Eintrag vorhanden ist, wird der gesammte Verkehr der 
-mit demselben Lable gekennzeichnet ist auch immer über dasselbe Interface 
+Dazu führt der Router eine Datenstruktur in Form einer Tabelle (ILM), die für 
+jedes Label eine entsprechende 
+\textit{next-hop label forwarding instruction (NHLFE)} enthält. 
+Da für jedes Label nur ein Eintrag vorhanden ist, wird der gesamte Verkehr der 
+mit demselben Label gekennzeichnet ist auch immer über dasselbe Interface 
 geroutet.
 Um nun eine flussbasiertes Routing mit MPLS zu ermöglichen muss MPLS so 
 erweitert werden, dass der zu einem Label gehörende Datenverkehr anteilig auf 
@@ -508,14 +519,14 @@ auf die diesem Label zugeordneten Interfaces aufteilen kann.
 
 Damit Pakete die zu einer TCP-Verbindung gehören nicht unnötig über 
 unterschiedliche Wege durch das Netz geschickt werden, wodurch 
-Laufzeitunterschiede entstehen können, verwednet Wang et al. in \cite{tD2_WWMA10} 
-ein Hashfunktion um die Pakete auf die zur Verfügung stehenden Links zu 
-verteilen.
+Laufzeitunterschiede entstehen können, verwendet Wang et al. in 
+\cite{tD2_WWMA10} eine Hashfunktion um die Pakete auf die zur Verfügung 
+stehenden Links zu verteilen.
 Die Hashfunktion erhält als Eingabe die Quell- und Ziel-IP, die Quell- und 
 Ziel-Ports sowie eine ID, abhängig vom aktuellen Router.
-Ziel der Hash-Funktion ist es, Pakten die zur selben TCP-Verbindung gehören auf 
+Ziel der Hash-Funktion ist es, Pakete die zur selben TCP-Verbindung gehören auf 
 einem Router immer denselben Hash-Wert zuzuordnen, 
-für unterschieldiche Router aber unterschiedlich zu sein.
+für unterschiedliche Router aber unterschiedlich zu sein.
 So wird erreicht, dass die Pakete einer TCP-Verbindung denselben Weg nehmen.  
 
 %TODO Referenz zu Fehlererkennung auf Schicht 2 einfügen
@@ -527,19 +538,19 @@ Zu Fehlererkennung während des Betriebs kann die Sicherungsschicht (Layer 2)
 auf Fehlerereignisse beobachtet werden. 
 Auch andere Fehlererkennungsverfahren wie z.B \cite{tD2_KYGS05} sind möglich.
 Wird ein fehlerhafter Link erkannt, 
-werden alle andern Router mittels ICMP Paketen üder den Fehler informiert, so 
-das diese entsprechend ihr Protection Routing anpassen können.
-Dazu muss jeder Router die \textit{next-hop spitting ratio} für die zu dem 
+werden alle andern Router mittels ICMP Pakete über den Fehler informiert, so 
+dass diese entsprechend ihr Protection Routing anpassen können.
+Dazu muss jeder Router die \textit{next-hop splitting ratio} für die zu dem 
 ausgefallenen Link gehörenden Alternative-Links anpassen.
 
 Um nun Pakete im Fehlerfall umzuleiten wird der Label-Stack von MPLS verwendet. 
 Erkennt ein Router einen Linkfehler wird die für das Label des Paketes 
 definierte Alternative-Route aktiviert.
-Dazu pusht der Router ein weiters Label auf den Label-Stack des Paketes und 
-ordent es damit der Alternative-Route zu.
-Das Paket wird dann entsprechend diesem Lable weitergeleitet. 
+Dazu legt der Router ein weiteres Label auf den Label-Stack des Paketes und 
+ordnet es damit der Alternative-Route zu.
+Das Paket wird dann entsprechend diesem Label weitergeleitet. 
 Erreicht ein Paket wieder die Ursprungsroute, 
-wird das neue Lable wieder vom Label-Stack entfernt und kann auf normalem Weg 
+wird das neue Label wieder vom Label-Stack entfernt und kann auf normalem Weg 
 weitergeleitet werden.
 
 \begin{Bsp}
@@ -557,13 +568,13 @@ wie in \ref{tD2_Implementation_Example_02} dargestellt,
 so muss R1 sein Protection Routing aktivieren 
 und die Pakete entsprechend über die Alternativrouten umleiten. 
 Dazu ordnet R1 anhand seiner ILM den Paketen ein neues Protection Label, 
-bsw. 101 zu und legt es auf den Label Stack der MPLS Dateneinheit.
-Für dieses Label existiern nun angenommen zwei NHLFE in der ILM von R1, die 
-besagen, dass jeweils jeweils 50\% des Verkehrs von (R1,R2) nun über (R1,R4) 
+beispielsweise 101 zu und legt es auf den Label Stack der MPLS Dateneinheit.
+Für dieses Label existieren angenommen zwei NHLFE in der ILM von R1, die 
+besagen, dass jeweils 50\% des Verkehrs von (R1,R2) über (R1,R4) 
 und (R1,R5) übertragen werden.
-Um nun Pakete für dieselbe TCP-Verbindung auch auf demselbe Weg zu 
-transportieren, berechnet R1 wie oben beschieben eine Hashwert. 
-Anhand dieses Wertes teilt die Pakete entprechend für O1 an den nächsten Router 
+Um nun Pakete für dieselbe TCP-Verbindung auch auf demselben Weg zu 
+transportieren, berechnet R1 wie oben beschrieben eine Hashwert. 
+Anhand dieses Wertes teilt die Pakete entsprechend für O1 an den nächsten Router 
 R4 zu und die Pakete von O2 an den nächsten Router R5.
 R4 und R5 leiten die Pakte dann entsprechend des Labels 101 an R2 weiter, 
 wo das oberste Label 101 wieder vom Stack entfernt und auf normalem Weg weiter 
@@ -593,16 +604,16 @@ die Backbone-Topologie des Abilene Netzwerks emuliert.
 \begin{table}[!htb]  
 \label{tD2_SummaryNetworks}                   
 \begin{center}
-\begin{tabular}{|l||c|c|c|c|c|c|}
+\begin{tabular}{|l||r|r|}
 \hline
 Netz		& Knoten	& Links	\\
 \hline
-Abilene    	& 11	& 28 \\
-Level-3		& 17	& 72 \\
-SBC		& 19	& 70 \\
-UUNet		& 47	& 336  \\
-Generated	& 100	& 460  \\
-US-ISP		& -	& - \\
+Abilene    	& 11		& 28 \\
+Level-3		& 17		& 72 \\
+SBC		& 19		& 70 \\
+UUNet		& 47		& 336  \\
+Generated	& 100		& 460  \\
+US-ISP		& -		& - \\
 \hline
 \end{tabular}
 \end{center}
@@ -616,8 +627,8 @@ Zwei-Link-Fehler berücksichtigt.
 Da die Anzahl möglicher Szenarien für mehr als zwei Fehler extrem groß wird, 
 wurden insgesamt 1100 verschiedene Drei- und Vier-Link-Fehler 
 berücksichtigt, die zufällig ausgewählt wurden.
-Gemessen wurde zum einen die Worst-Case Verkehrsdichte, bzw die Netzwerkstauung 
-und zum Anderen das Verhältnis aus Worst-Case Verkehrsdicht und optimalem 
+Gemessen wurde zum einen die Worst-Case Verkehrsdichte, bzw. die Netzwerkstauung 
+und zum Anderen das Verhältnis aus Worst-Case Verkehrsdichte und optimalem 
 flussbasiertem Routing.
 
 %TODO Verfahren nochmal überarbeiten
@@ -637,8 +648,8 @@ sortiert.
 In alle drei Grafiken lässt sich die gleiche Gruppierung erkennen. 
 OSPF+R3, OSPF+opt, MPLS+R3 liegen immer nahe beieinander und sind dem Optimum 
 am nächsten.
-PSPF+CSPF, OSPF+recon und FCP bilden ebenfalls eien Gruppe  liegen ebenfalls 
-eng zusammen und sind zumindes für die Extremwerte am weitesten vom Optimum 
+PSPF+CSPF, OSPF+recon und FCP bilden ebenfalls eine Gruppe  liegen ebenfalls 
+eng zusammen und sind zumindest für die Extremwerte am weitesten vom Optimum 
 entfernt.
 PathSplicing liegt in der Regel zwischen den beiden Gruppen. 
 In Zahlen ausgedrückt, liegt die erste Gruppe für Einzel-Fehler Events etwa 
@@ -666,12 +677,12 @@ Bei Drei-Fehler Events beträgt der Abstand hingegen mindestens 50\%
 \label{tD2_USISPMeasurement}
 \end{figure}
 
-Weiterhin interressant sind die Ergebnisse für die SBC Topologie, siehe 
+Weiterhin interessant sind die Ergebnisse für die SBC Topologie, siehe 
 Abbildung \ref{tD2_SBC_ThreeFailure}.
-Die Graifk zweigt ein deutlich besseres Leistubgsverhältnis für 
+Die Grafik zweigt ein deutlich besseres Leistungsverhältnis für 
 MPLS-ff+R3 gegenüber allen anderen Verfahren. Nach Wang et al. liegt dieses 
 Verhalten in der gemeinsamen Optimierung von Routing und Protection-Routing von 
-MPLS-ff+R3 begründet udn zeigt dessen Vorteile.
+MPLS-ff+R3 begründet und zeigt dessen Vorteile.
 
 \Abbildungf{!htb}{width= 0.50\textwidth}{tD2_SBC_ThreeFailure}{tD2_SBC_ThreeFailure}{Leistungsverhältnis für Drei-Fehler Szenarien (SBC) \cite{tD2_WWMA10}}
 
@@ -685,23 +696,23 @@ und $p$, den zusätzlichen Speicheraufwand von MPLS-ff und die
 Leistungsfähigkeit des Routings.
 
 Tabelle \ref{tD2_OfflinePhase} zeigt die ermittelten Zeiten der Offline-Phase. 
-Gelöst wurde das zugrundeliegende lineare Programm \ref{tD2_LPSimple} mit 
-ILOG CPLEX 10.0. Die Laufzeiten nehmen mit zunehmender Knoten- und Link Anzahl 
-zu, schwanken aber über der Anzahl der Fehler.
+Gelöst wurde das zugrunde liegende lineare Optimierungsproblem 
+\ref{tD2_LPSimple} mit ILOG CPLEX 10.0. Die Laufzeiten nehmen mit zunehmender 
+Knoten- und Linkanzahl zu, schwanken aber über der Anzahl der Fehler.
 
 \begin{table}[!htb]  
 \label{tD2_OfflinePhase}                   
 \begin{center}
-\begin{tabular}{|l||c|c|c|c|c|c|}
+\begin{tabular}{|l||r|r|r|r|r|r|}
 \hline
-Netz / Anzahl Link-Fehler	& 1 	& 2 	& 3 	& 4 	& 5 	& 6 \\
+Netz / Anzahl Link-Fehler	& \multicolumn{1}{c|}{1} & \multicolumn{1}{c|}{2} & \multicolumn{1}{c|}{3} & \multicolumn{1}{c|}{4} & \multicolumn{1}{c|}{5} & \multicolumn{1}{c|}{6} \\
 \hline
-Abilene    			& 0.3	& 0.30	& 0.30	& 0.32	& 0.33	& 0.29 \\
-Level-3				& 1.80	& 1.97	& 2.56	& 2.71	& 2.46	& 2.43 \\
-SBC				& 1.46	& 1.76	& 1.75	& 1.76	& 1.92	& 1.91 \\
-UUNet				& 1010	& 572	& 1067	& 810 	& 864	& 720 \\
-Generated			& 1388	& 929	& 1971	& 2001	& 1675	& 2131 \\
-US-ISP				& 21.3	& 21.9	& 21.4	& 20.1	& 22.1	& 21.8 \\
+Abilene    			& 0.30		& 0.30		& 0.30		& 0.32		& 0.33		& 0.29 \\
+Level-3				& 1.80		& 1.97		& 2.56		& 2.71		& 2.46		& 2.43 \\
+SBC				& 1.46		& 1.76		& 1.75		& 1.76		& 1.92		& 1.91 \\
+UUNet				& 1010.00	& 572.00	& 1067.00	& 810.00 	& 864.00	& 720.00 \\
+Generated			& 1388.00	& 929.00	& 1971.00	& 2001.00	& 1675.00	& 2131.00 \\
+US-ISP				& 21.30		& 21.90		& 21.40		& 20.10		& 22.10		& 21.80 \\
 \hline
 \end{tabular}
 \end{center}
@@ -715,15 +726,11 @@ Zur Evaluierung der Leistungsfähigkeit von R3 wurde der Durchsatz zwischen
 jedem Sender-Empfänger Paar des Abilene Netzwerks, die Link-Auslastungen und 
 die aufsummierte Verlustrate an den End-Routern gemessen. Zur Fehler-Simulation 
 wurden drei Links nacheinander abgeschaltet. Diese erkennt man an der 
-treppenartig steigenden Round Trip Time einer Verbindung in Abbildung 
+treppenförmig steigenden Round Trip Time einer Verbindung in Abbildung 
 \ref{tD2_RTT_Measurement}. 
-Eine Überlastung der Links durch R3 Rerouting konnte nicht jedoch nicht 
+Eine Überlastung der Links durch R3 Rerouting konnte jedoch nicht 
 festgestellt werden.
 \Abbildungf{!htb}{width= 0.50\textwidth}{tD2_RTT_Measurement}{tD2_RTT_Measurement}{Round Trip Time (RTT) einer Verbindung}
-
-
-
-
 
 
 %------------------------------------------------------------------------------
